ci: add docker-compose and GitHub Actions deployment setup
- Add docker-compose.yml for local development environment
- Update .env.example with empty database credentials
- Implement GitHub Actions workflow for automated deployment via SSH

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@ SMS_USERNAME=
 SMS_PASSWORD=
 
 
-DB_NAME=mobile_pricing_store
-DB_USER=postgres
-DB_PASSWORD=mahya-903
-DB_HOST=localhost
-DB_PORT=5432
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=
