--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,6 +52,16 @@ jobs:
               git reset --hard origin/${GIT_BRANCH:-main}
             fi
 
+            echo "⚙️ Generating .env file..."
+            cat <<EOF > .env
+            DB_NAME=${{ secrets.DB_NAME }}
+            DB_USER=${{ secrets.DB_USER }}
+            DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+            DB_HOST=${{ secrets.DB_HOST }}
+            DB_PORT=${{ secrets.DB_PORT }}
+            EOF
+
+
             echo "🐳 Rebuilding Docker containers..."
             docker compose pull || true
             docker compose up -d --build
