build(docker): update volume mount path for static files
Change the volume mount from root directory to staticfiles directory to properly serve static assets in production

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,6 @@ services:
     ports:
       - "4040:8000"
     volumes:
-      - .:/app
+      - ./staticfiles:/var/www/shikala/staticfiles
     env_file:
       - .env
