--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.9'
 services:
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: gunicorn shikala.wsgi:application --bind 0.0.0.0:8000
     ports:
       - "4040:8000"
     env_file:
