ci: add volume mount for staticfiles in docker-compose
Mount host staticfiles directory to container to persist static assets between container restarts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,7 @@ services:
     build: .
     ports:
       - "4040:8000"
+    volumes:
+      - /var/www/shikala/staticfiles:/app/staticfiles
     env_file:
       - .env
