build: update staticfiles volume path in docker-compose.yml
Change from absolute path to relative path for better portability and local development consistency

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,6 @@ services:
     ports:
       - "4040:8000"
     volumes:
-      - /var/www/shikala/staticfiles:/app/staticfiles
+      - ./staticfiles:./staticfiles
     env_file:
       - .env
