--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,6 @@ services:
     ports:
       - "4040:8000"
     volumes:
-      - ./staticfiles:./staticfiles
+      - ./staticfiles:/app/staticfiles
     env_file:
       - .env
