build: update Docker config and CI workflow for better performance
- Add gunicorn to requirements.txt for production deployment
- Create .dockerignore to reduce build context size
- Optimize Dockerfile with BuildKit cache and environment variables
- Enhance deploy workflow with BuildKit support and static file collection

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,6 +52,10 @@ jobs:
               git reset --hard origin/${GIT_BRANCH:-main}
             fi
 
+            echo "🚀 Enabling Docker BuildKit for faster builds"
+            export DOCKER_BUILDKIT=1
+            export COMPOSE_DOCKER_CLI_BUILD=1
+
             echo "⚙️ Generating .env file..."
             cat <<EOF > .env
             DB_NAME=${{ secrets.DB_NAME }}
@@ -65,6 +69,9 @@ jobs:
             echo "🐳 Rebuilding Docker containers..."
             docker compose pull || true
             docker compose up -d --build
+
+            echo "🧹 Collecting static files in running container..."
+            docker compose exec -T web python manage.py collectstatic --noinput || true
 
             echo "✅ Containers status:"
             docker compose ps
