ci(deploy): optimize deployment workflow with prebuilt images
- Add docker-compose.prod.yml for production configuration
- Remove static collection from Dockerfile since it's now done during deployment
- Update GitHub workflow to build and push images to GHCR before deployment
- Use prebuilt images in deployment script instead of building on server

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,44 @@
-name: Deploy to server (via SSH)
+name: Build image and deploy to server (via SSH)
+
+permissions:
+  contents: read
+  packages: write
 
 on:
   push:
     branches: [ main ]
 
 jobs:
+  build_and_push_image:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository }}:${{ github.sha }}
+            ghcr.io/${{ github.repository }}:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
   deploy:
     runs-on: ubuntu-latest
+    needs: build_and_push_image
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -27,13 +59,14 @@ jobs:
           SSH_USER: ${{ secrets.SSH_USER }}
           REMOTE_APP_PATH: ${{ secrets.REMOTE_APP_PATH }}
           GIT_BRANCH: main
+          IMAGE_NAME: ghcr.io/${{ github.repository }}:${{ github.sha }}
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           timeout: 30m
-          envs: SSH_USER,REMOTE_APP_PATH,GIT_BRANCH
+          envs: SSH_USER,REMOTE_APP_PATH,GIT_BRANCH,IMAGE_NAME
           script: |
             set -e
             APP_PATH="${REMOTE_APP_PATH:-/home/${SSH_USER}/app}"
@@ -52,10 +85,6 @@ jobs:
               git reset --hard origin/${GIT_BRANCH:-main}
             fi
 
-            echo "🚀 Enabling Docker BuildKit for faster builds"
-            export DOCKER_BUILDKIT=1
-            export COMPOSE_DOCKER_CLI_BUILD=1
-
             echo "⚙️ Generating .env file..."
             cat <<EOF > .env
             DB_NAME=${{ secrets.DB_NAME }}
@@ -65,13 +94,12 @@ jobs:
             DB_PORT=${{ secrets.DB_PORT }}
             EOF
 
-
-            echo "🐳 Rebuilding Docker containers..."
-            docker compose pull || true
-            docker compose up -d --build
+            echo "🐳 Pulling prebuilt image and starting containers..."
+            docker compose -f docker-compose.yml -f docker-compose.prod.yml pull || true
+            docker compose -f docker-compose.yml -f docker-compose.prod.yml up -d
 
             echo "🧹 Collecting static files in running container..."
-            docker compose exec -T web python manage.py collectstatic --noinput || true
+            docker compose -f docker-compose.yml -f docker-compose.prod.yml exec -T web python manage.py collectstatic --noinput || true
 
             echo "✅ Containers status:"
             docker compose ps
