ci(deploy): simplify deployment workflow and remove staticfiles volume
Remove staticfiles volume mount from production compose file as it's no longer needed. Update deploy workflow to use --pull always flag instead of separate pull command and remove static files collection step.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -94,12 +94,8 @@ jobs:
             DB_PORT=${{ secrets.DB_PORT }}
             EOF
 
-            echo "🐳 Pulling prebuilt image and starting containers..."
-            docker compose -f docker-compose.yml -f docker-compose.prod.yml pull || true
-            docker compose -f docker-compose.yml -f docker-compose.prod.yml up -d
-
-            echo "🧹 Collecting static files in running container..."
-            docker compose -f docker-compose.yml -f docker-compose.prod.yml exec -T web python manage.py collectstatic --noinput || true
+            echo "🐳 Starting containers with latest image..."
+            docker compose -f docker-compose.yml -f docker-compose.prod.yml up -d --pull always
 
             echo "✅ Containers status:"
             docker compose ps
