feat(commands): add bulk import command for mobile models and pictures
Implement a management command to efficiently import mobile models and their associated pictures from a CSV file. The command handles batch processing and includes error handling for image downloads. Additionally, update docker-compose to mount static files and clean up settings.py by removing unnecessary comments.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,5 +4,7 @@ services:
     image: ${IMAGE_NAME}
     ports:
       - "4040:8000"
+    volumes:
+      - ./staticfiles:/app/staticfiles
     env_file:
       - .env
