chore(docker): update production configuration for static files
Modify docker-compose to mount static files from a specific directory and adjust STATIC_URL in settings.py for proper URL handling. Remove unnecessary collectstatic command from Dockerfile.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,7 +4,7 @@ services:
     image: ${IMAGE_NAME}
     ports:
       - "4040:8000"
-    volumes:
-      - ./staticfiles:/app/staticfiles
     env_file:
       - .env
+    volumes:
+      - /var/www/shikala-website-api/staticfiles:/app/staticfiles
